<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_test"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.quent.geophone.TestActivity">


<Button
    android:text="@string/call"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/buttonVibrate"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="39dp"
    android:id="@+id/buttonCall" />

<Button
    android:text="@string/bluetoothON"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="71dp"
    android:id="@+id/buttonBluetoothON"
    android:layout_marginStart="33dp"
    android:layout_below="@+id/buttonCall"
    android:layout_alignParentStart="true" />

<Button
    android:text="@string/bluetoothOFF"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/buttonBluetoothOFF"
    android:layout_alignBaseline="@+id/buttonBluetoothON"
    android:layout_alignBottom="@+id/buttonBluetoothON"
    android:layout_alignParentEnd="true"
    android:layout_marginEnd="28dp" />

<Button
    android:text="@string/buttonManageContact"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:id="@+id/buttonManageContact" />

<Button
    android:text="@string/buttonTextAccueilCreateContact"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/buttonAccueilCreateContact"
    android:layout_alignParentBottom="true"
    android:layout_alignEnd="@+id/buttonBluetoothON" />

<Button
    android:text="@string/getBluetooth"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/buttonGetBluetooth"
    android:layout_above="@+id/buttonAccueilCreateContact"
    android:layout_alignParentStart="true"
    android:layout_marginBottom="21dp" />

<Button
    android:text="@string/buttonInfoAppli"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignTop="@+id/buttonGetBluetooth"
    android:layout_alignEnd="@+id/buttonBluetoothOFF"
    android:id="@+id/buttonInfoAppli" />

<Button
    android:text="@string/buttonSendSMS"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/buttonBluetoothON"
    android:layout_alignParentStart="true"
    android:id="@+id/buttonSendSMS" />

<Button
    android:text="@string/buttonGetGPS"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:id="@+id/buttonGetGPS"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true" />

<Button
    android:text="@string/vibrate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:id="@+id/buttonVibrate"
    android:layout_below="@+id/buttonGetGPS"
    android:layout_toEndOf="@+id/buttonSendSMS" />

<Button
    android:text="@string/buttonDisplayMap"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/buttonDisplayMap"
    android:layout_alignBaseline="@+id/buttonCall"
    android:layout_alignBottom="@+id/buttonCall"
    android:layout_toEndOf="@+id/buttonCall" />

</RelativeLayout>
