<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.quent.geophone.InfoActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/textViewInfoAppli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textView4"
            android:textSize="24sp"
            android:textStyle="normal|bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="387dp">

            <TextView
                android:text="@string/textViewInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5" />
        </ScrollView>

        <Button
            android:text="@string/buttonBackFromInfoToMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonBackFromInfoToMain" />
    </LinearLayout>
</RelativeLayout>
