<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_manage_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.quent.geophone.ManageContactActivity">

    <TextView
        android:text="Gérer les Contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/buttonModifyContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/textView"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="113dp"
        android:id="@+id/buttonModifyContact"
        android:textSize="14sp" />

    <Button
        android:text="@string/buttonDeleteContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:id="@+id/buttonDeleteContact"
        android:layout_alignBaseline="@+id/buttonModifyContact"
        android:layout_alignBottom="@+id/buttonModifyContact"
        android:layout_toEndOf="@+id/buttonModifyContact" />

    <Button
        android:text="@string/buttonManageContactBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="82dp"
        android:layout_marginTop="26dp"
        android:id="@+id/buttonManageContactBack"
        android:layout_below="@+id/buttonDeleteContact"
        android:layout_alignEnd="@+id/buttonDeleteContact" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_marginTop="32dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/buttonModifyContact" />
</RelativeLayout>
